--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -10,4 +10,9 @@
         android:id="@+id/menu_home"
         android:title="@string/home_text"
         app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/menu_log"
+        android:title="@string/log_text"
+        app:showAsAction="always"/>
 </menu>
